tests/sumo/basic/container/errors/duplicate_id/errors.sumo
Error: Another container with the id 'c1' exists.
Quitting (on error).
